# pymanga

./: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
core/: __main__.py  client.py
core/models/: manga.py
core/utils/: exceptions.py
pymanga/: __main__.py  client.py
pymanga/models/: __init__.py  manga.py
pymanga/utils/: exceptions.py  regex.py
tests/samples/: bad.xml  berserk.xml  bleach.xml  fake.html  fake_bad.html  naruto.json  naruto.xml
tests/unit/: test_client.py  test_models.py
